# RiseTgBot

./: .env  .gitignore  76561198250932118.txt  76561199185005608.txt  README  README.md  TODO  appids.py  loader.py  main.py  prices_v6.json  pyproject.toml  requirements.txt  sdfds.txt  steam_ids.txt  test.py  test2.py  ыва
bot/: TODO
bot/config/: __init__.py  config.json  settings.py
bot/core/: config.py  loader.py
bot/database/: __init__.py  base_model.py  database.py  db_requests.py  models.py  redis_db.py
bot/decorators/: dec_cache.py  dec_throttle.py
bot/filters/: MultipleStateInFilter.py  __init__.py  correct_number.py
bot/handlers/: __init__.py  buy_handlers.py  error_handlers.py  farmers_handlers.py  inventory_handlers.py  message_distributor_handlers.py  personal_handlers.py  product_handlers.py  products_handlers.py  shop_handlers.py  start_handlers.py  steam_gift_code_handlers.py  steam_limit_accounts_handlers.py  strategy_handlers.py
bot/keyboards/: __init__.py  admin_keyboards.py  buy_keyboard.py  farmers_keyboard.py  farmers_keyboards.py  message_distribution_keyboards.py  personal_keyboard.py  personal_keyboards.py  shop_keyboard.py  shop_keyboards.py  start_keyboard.py  start_keyboards.py  steam_gift_code_keyboard.py  steam_limit_accounts_keyboard.py  strategy_keyboard.py  user_kb.py
bot/l10n/: __init__.py  fluent_localization.py  locale.ftl
bot/middlewares/: __init__.py  l10n.py  localization.py  valid_answer.py
data/: config.json  file_ids.json  pricing_providers.json
redis/: dump.rdb
redis-windows-7.2.5.0/: README.md  dump.rdb
(+77 files in other folders)
